manifest/currency/templates/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: currency
  labels:
    app.kubernetes.io/name: currency
    app.kubernetes.io/part-of: astronomy-shop
spec:
  replicas: 1
  strategy:
    canary:
      maxSurge: 1
      maxUnavailable: 0
      steps:
        - setWeight: 100
  selector:
    matchLabels:
      app.kubernetes.io/name: currency
  template:
    metadata:
      labels:
        app.kubernetes.io/name: currency
        app.kubernetes.io/part-of: astronomy-shop
    spec:
      serviceAccountName: currency
      containers:
        - name: currency
          image: REPLACE_ME/currency:REPLACE_ME
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 7001
          readinessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
