manifest/currency/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency
  labels:
    app.kubernetes.io/name: currency
    app.kubernetes.io/part-of: astronomy-shop
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: currency
  ports:
    - name: grpc
      port: 7001
      targetPort: grpc
