manifest/currency/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: currency
  labels:
    app.kubernetes.io/name: currency
    app.kubernetes.io/part-of: astronomy-shop
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: currency
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: frontend
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: frontend-proxy
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: checkout
      ports:
        - protocol: TCP
          port: 7001
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: otel-collector
      ports:
        - protocol: TCP
          port: 4317
